CI: deactivate check_opam_deps

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,16 +37,17 @@ stages:
   tags:
     - gitlab-org
 
-check_opam_deps:
-  <<: *build_definition
-  script:
-    - if [ "${build_deps_image_version}" != "${opam_repository_tag}" ] ; then
-        echo "Inconsistent dependencies hash between 'scripts/version.sh' and '.gitlab-ci.yml'." ;
-        echo "${build_deps_image_version} != ${opam_repository_tag}" ;
-        exit 1 ;
-      fi
-    - ./scripts/opam-check.sh
-    - ./scripts/check_opam_test.sh
+# We don't want to fix this on branch mainnet-lmdb (repository tag error)
+# check_opam_deps:
+#   <<: *build_definition
+#   script:
+#     - if [ "${build_deps_image_version}" != "${opam_repository_tag}" ] ; then
+#         echo "Inconsistent dependencies hash between 'scripts/version.sh' and '.gitlab-ci.yml'." ;
+#         echo "${build_deps_image_version} != ${opam_repository_tag}" ;
+#         exit 1 ;
+#       fi
+#     - ./scripts/opam-check.sh
+#     - ./scripts/check_opam_test.sh
 
 check_opam_lint:
   <<: *build_definition
