Shell/Validation: external validation through socket

--- a/src/lib_validation/dune
+++ b/src/lib_validation/dune
@@ -5,12 +5,14 @@
             tezos-storage
             tezos-shell-context
             tezos-shell-services
-            tezos-protocol-updater)
+            tezos-protocol-updater
+	    tezos-stdlib-unix)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_storage
                    -open Tezos_shell_context
                    -open Tezos_shell_services
-                   -open Tezos_protocol_updater)))
+                   -open Tezos_protocol_updater
+                   -open Tezos_stdlib_unix)))
 
 (alias
  (name runtest_lint)
