lib_mempool: use dune rather than jbuilder
This is the result of `dune upgrade`

Needed for tezos/tezos#633

--- a/src/proto_alpha/lib_mempool/tezos-mempool-alpha.opam
+++ b/src/proto_alpha/lib_mempool/tezos-mempool-alpha.opam
@@ -14,7 +14,7 @@ depends: [
   "tezos-shell"
 ]
 build: [
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
 synopsis: "Tezos/Protocol: mempool-filters"
