--- a/src/bin_client/dune
+++ b/src/bin_client/dune
@@ -19,6 +19,7 @@
             tezos-client-003-PsddFKi3
             tezos-client-004-Pt24m4xi
             tezos-client-005-PsBabyM1
+            tezos-client-006-PsCARTHA
 
             tezos-client-alpha-commands.registration
             tezos-client-001-PtCJ7pwo-commands.registration
@@ -26,10 +27,12 @@
             tezos-client-003-PsddFKi3-commands.registration
             tezos-client-004-Pt24m4xi-commands.registration
             tezos-client-005-PsBabyM1-commands.registration
+            tezos-client-006-PsCARTHA-commands.registration
 
             tezos-baking-alpha-commands.registration
             tezos-baking-004-Pt24m4xi-commands.registration
             tezos-baking-005-PsBabyM1-commands.registration
+            tezos-baking-006-PsCARTHA-commands.registration
 
             tezos-stdlib-unix
             tezos-client-base-unix
