--- a/src/bin_client/tezos-client.opam
+++ b/src/bin_client/tezos-client.opam
@@ -24,6 +24,7 @@ depends: [
   "tezos-client-003-PsddFKi3"
   "tezos-client-004-Pt24m4xi"
   "tezos-client-005-PsBabyM1"
+  "tezos-client-006-PsCARTHA"
 
   "tezos-client-alpha-commands"
   "tezos-client-001-PtCJ7pwo-commands"
@@ -31,6 +32,7 @@ depends: [
   "tezos-client-003-PsddFKi3-commands"
   "tezos-client-004-Pt24m4xi-commands"
   "tezos-client-005-PsBabyM1-commands"
+  "tezos-client-006-PsCARTHA-commands"
 
   "tezos-baking-alpha"
   "tezos-baking-004-Pt24m4xi"
@@ -39,6 +41,7 @@ depends: [
   "tezos-baking-alpha-commands"
   "tezos-baking-004-Pt24m4xi-commands"
   "tezos-baking-005-PsBabyM1-commands"
+  "tezos-baking-006-PsCARTHA-commands"
 
   "tezos-client-base-unix"
   "tezos-signer-backends"
