--- a/src/bin_node/tezos-node.opam
+++ b/src/bin_node/tezos-node.opam
@@ -30,8 +30,10 @@ depends: [
   "tezos-embedded-protocol-004-Pt24m4xi"
   "tezos-embedded-protocol-005-PsBABY5H"
   "tezos-embedded-protocol-005-PsBabyM1"
+  "tezos-embedded-protocol-006-PsCARTHA"
   "tezos-mempool-004-Pt24m4xi"
   "tezos-mempool-005-PsBabyM1"
+  "tezos-mempool-006-PsCARTHA"
   "cmdliner"
   "tls"
   "cstruct"
