--- a/src/lib_workers/tezos-workers.opam
+++ b/src/lib_workers/tezos-workers.opam
@@ -7,12 +7,13 @@ dev-repo: "git+https://gitlab.com/tezos/tezos.git"
 license: "MIT"
 depends: [
   "tezos-tooling" { with-test }
+  "ocamlfind" { build }
   "dune" { >= "1.7" }
   "tezos-base"
-  "tezos-workers"
+  "tezos-stdlib-unix"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
-synopsis: "Tezos: descriptions of RPCs exported by `tezos-node`"
+synopsis: "Tezos: worker library"
