Codec: link with Athens, Babylon and Carthage clients

--- a/src/bin_codec/tezos-codec.opam
+++ b/src/bin_codec/tezos-codec.opam
@@ -18,6 +18,9 @@ depends: [
   "tezos-clic"
   "tezos-signer-services"
   "tezos-client-alpha"
+  "tezos-client-004-Pt24m4xi"
+  "tezos-client-005-PsBabyM1"
+  "tezos-client-006-PsCARTHA"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
