--- a/src/bin_sandbox/dune
+++ b/src/bin_sandbox/dune
@@ -45,8 +45,34 @@
          )))
 
 (alias
+  (name runtest_sandbox_user_activated_upgrade)
+  (locks /tcp-port/40000_range)
+  (action
+    (run %{exe:main.exe} mini-net
+         --root-path %{env:ROOT_PATH=/tmp/flextesa-hard-fork/}
+         --base-port 40_000
+         --size 2
+         --number-of-b 2
+         --with-timestamp
+         --until 20
+         --protocol-hash PsBabyM1eUXZseaJdmXFApDSBqj8YBfwELoxZHHW77EMcAbbwAS
+         --protocol-kind Babylon
+         --tezos-client %{bin:tezos-client}
+         --tezos-node %{bin:tezos-node}
+         --tezos-baker %{bin:tezos-baker-005-PsBabyM1}
+         --tezos-endorser %{bin:tezos-endorser-005-PsBabyM1}
+         --tezos-accuser %{bin:tezos-accuser-005-PsBabyM1}
+         --hard-fork 10:ProtoALphaALphaALphaALphaALphaALphaALphaALphaDdp3zK
+         --hard-fork-baker %{bin:tezos-baker-alpha}
+         --hard-fork-endorser %{bin:tezos-endorser-alpha}
+         --hard-fork-accuser %{bin:tezos-accuser-alpha}
+         )))
+
+(alias
  (name runtest)
  (deps
   (alias runtest_sandbox_accusations_simple_double_baking)
   (alias runtest_sandbox_accusations_simple_double_endorsing)
-  (alias runtest_sandbox_voting_demo_noops)))
+  (alias runtest_sandbox_voting_demo_noops)
+  (alias runtest_sandbox_user_activated_upgrade)
+  ))
