--- a/src/lib_requester/tezos-requester.opam
+++ b/src/lib_requester/tezos-requester.opam
@@ -16,4 +16,4 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
-synopsis: "Tezos: generic request scheduler/cache service"
+synopsis: "Tezos: generic resource fetching service"
