--- a/src/lib_shell/dune
+++ b/src/lib_shell/dune
@@ -10,7 +10,7 @@
             tezos-shell-services
             tezos-protocol-updater
             tezos-validation
-            tezos-cache)
+            tezos-requester)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_storage
                    -open Tezos_shell_context
@@ -19,7 +19,7 @@
                    -open Tezos_shell_services
                    -open Tezos_protocol_updater
                    -open Tezos_validation
-                   -open Tezos_cache)))
+                   -open Tezos_requester)))
 
 (alias
  (name runtest_lint)
