--- a/src/lib_shell/tezos-shell.opam
+++ b/src/lib_shell/tezos-shell.opam
@@ -16,6 +16,7 @@ depends: [
   "tezos-protocol-updater"
   "tezos-validation"
   "tezos-stdlib-unix"
+  "tezos-requester"
   "alcotest-lwt" { with-test }
   "tezos-embedded-protocol-demo-noops" { with-test }
 ]
