Node, Client, Codec: link with Carthage

--- a/src/bin_node/tezos-node.opam
+++ b/src/bin_node/tezos-node.opam
@@ -23,7 +23,9 @@ depends: [
   "tezos-embedded-protocol-004-Pt24m4xi"
   "tezos-embedded-protocol-005-PsBabyM1"
   "tezos-embedded-protocol-005-PsBABY5H"
+  "tezos-embedded-protocol-006-PsCARTHA"
   "tezos-mempool-005-PsBabyM1"
+  "tezos-mempool-006-PsCARTHA"
   "cmdliner"
   "tls"
   "cstruct"
